log
Thu 24 Aug 2023 12:16:38 AM UTC: 
 tests:  0|6
total_score: 0/70
9359820
Thu 24 Aug 2023 06:37:17 PM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
e2aa153
Thu 24 Aug 2023 06:38:43 PM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:41:10: error: ‘List’ {aka ‘struct List’} has no member named ‘prev’
   41 |   if(list->prev !=NULL){
      |          ^~
list.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
   48 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
38d1ff7
Thu 24 Aug 2023 06:39:02 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:41:12: error: ‘List’ {aka ‘struct List’} has no member named ‘heat’; did you mean ‘head’?
   41 |   if(list->heat !=NULL){
      |            ^~~~
      |            head
list.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
   48 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1cbc9fb
Thu 24 Aug 2023 06:39:15 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
8ce69af
Thu 24 Aug 2023 06:40:17 PM UTC: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  2|5
total_score: 15/70
b7869d4
Thu 24 Aug 2023 06:41:42 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
73c0cc6
Thu 24 Aug 2023 06:41:58 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
ba5252f
Thu 24 Aug 2023 06:42:12 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
07eceb3
Thu 24 Aug 2023 06:42:26 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
652a5f8
Thu 24 Aug 2023 07:00:18 PM UTC: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c:56:8: error: redefinition of ‘firstList’
   56 | void * firstList(List * list) {
      |        ^~~~~~~~~
list.c:40:8: note: previous definition of ‘firstList’ was here
   40 | void * firstList(List * list) {
      |        ^~~~~~~~~
list.c: In function ‘firstList’:
list.c:59:25: error: ‘Node’ has no member named ‘head’
   59 |     return list->current->head;
      |                         ^~
list.c:64:1: error: control reaches end of non-void function [-Werror=return-type]
   64 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
60ca9d1
Thu 24 Aug 2023 07:00:34 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c:56:8: error: redefinition of ‘firstList’
   56 | void * firstList(List * list) {
      |        ^~~~~~~~~
list.c:40:8: note: previous definition of ‘firstList’ was here
   40 | void * firstList(List * list) {
      |        ^~~~~~~~~
list.c: In function ‘firstList’:
list.c:58:24: error: ‘List’ {aka ‘struct List’} has no member named ‘data’
   58 |     list->current =list->data;
      |                        ^~
list.c:59:25: error: ‘Node’ has no member named ‘head’
   59 |     return list->current->head;
      |                         ^~
list.c:64:1: error: control reaches end of non-void function [-Werror=return-type]
   64 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1bfc7b7
Thu 24 Aug 2023 07:00:42 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c:56:8: error: redefinition of ‘firstList’
   56 | void * firstList(List * list) {
      |        ^~~~~~~~~
list.c:40:8: note: previous definition of ‘firstList’ was here
   40 | void * firstList(List * list) {
      |        ^~~~~~~~~
list.c: In function ‘firstList’:
list.c:58:26: error: ‘List’ {aka ‘struct List’} has no member named ‘heat’; did you mean ‘head’?
   58 |     list->current =list->heat;
      |                          ^~~~
      |                          head
Compilation failed
e456f53
